Antlr4.0Book/Antlr4.0BookJava/04_2LibExpr/src/main/antlr4/libExpr/LibExpr.g4
grammar LibExpr;
import CommonLexerRules;

/** The start rule; begin parsing here. */
prog:   stat+;

stat:   expr NEWLINE
    |   ID '=' expr NEWLINE
    |   NEWLINE
    ;

expr:   expr ('*'|'/') expr
    |   expr ('+'|'-') expr
    |   INT
    |   ID
    |   '(' expr ')'
    ;
